unpackaged/main/default/objects/Account/fields/isselected__c.field-meta.xml
<CustomField>
    <fullName>isselected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isselected</label>
    <type>Checkbox</type>
</CustomField>