unpackaged/main/default/objects/Account/fields/No_of_opportunitys_c__c.field-meta.xml
<CustomField>
    <fullName>No_of_opportunitys_c__c</fullName>
    <label>No_of_opportunitys__c</label>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>