unpackaged/main/default/objects/Account/fields/Number_of_Building_projects__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Building_projects__c</fullName>
    <label>Number of Building projects</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>