unpackaged/main/default/objects/Account/fields/numberOfInquiries__c.field-meta.xml
<CustomField>
    <fullName>numberOfInquiries__c</fullName>
    <label>numberOfInquiries</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>