unpackaged/main/default/objects/Account/fields/Total_no_of_Files__c.field-meta.xml
<CustomField>
    <fullName>Total_no_of_Files__c</fullName>
    <label>Total no of Files</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>