unpackaged/main/default/objects/Account/fields/Total_opp_amount__c.field-meta.xml
<CustomField>
    <fullName>Total_opp_amount__c</fullName>
    <label>Total opp amount</label>
    <summarizedField>Opportunity.Amount</summarizedField>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>