unpackaged/main/default/objects/Account/validationRules/Accountnumber_lenth_should_not_be.validationRule-meta.xml
<ValidationRule>
    <fullName>Accountnumber_lenth_should_not_be</fullName>
    <active>false</active>
    <errorConditionFormula>AND(NOT( ISNEW() ) , LEN( AccountNumber ) &gt;8)</errorConditionFormula>
    <errorMessage>Account number should not be 8 characters</errorMessage>
</ValidationRule>